--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,6 @@ body {
     flex-direction: column;
     font-family: "Lato", serif;
     color: var(--quarterly-);
-    gap: 30px;
 }
 
 main {
@@ -45,10 +44,11 @@ main {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    margin: 32px;
 
     h2 {
         font-family: "Dawning of a New Day", serif;
-        font-size: 30pt;
+        font-size: 40pt;
         align-items: center;
     }
 }
@@ -58,12 +58,16 @@ main {
     padding: 8px 32px;
     border-radius: 20px;
     align-self: center;
-    font-family: "Roboto", serif;
+    font-family: "Lato", serif;
     font-weight: bold;
     color: var(--primary);
     font-size: 11pt;
     cursor: pointer;
     margin-bottom: 16px;
+}
+
+.droite {
+    align-self: flex-end;
 }
 
 .marron {
@@ -72,7 +76,8 @@ main {
 }
 
 .boutton.marron:hover {
-    background-color: var(--secondary);
+    background-color: white;
+    color: var(--primary);
 }
 
 .blanc {
@@ -81,7 +86,8 @@ main {
 }
 
 .boutton.blanc:hover {
-    background-color: var(--secondary);
+    background-color: var(--primary);
+    color: white;
 }
 
 /* FORM */
@@ -131,18 +137,6 @@ main {
         } 
     }
 
-}
-
-.delete {
-    background: none;
-    font-weight: bold;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-
-.delete:hover {
-    border-bottom: 1px solid red;
-    color: red;
 }
 
 /* MESSAGE ERREUR SUCCES*/
@@ -246,88 +240,80 @@ footer {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px;
+    gap: 16px;
     max-width: 500px;
-    margin: 20px auto;
+    margin: 16px auto;
     padding: 12px 20px;
     border-radius: 10px;
+    box-sizing: border-box;
 
     input[type="text"] {
-    flex: 1;
-    width: 250px;
-    padding: 10px;
-    border: 2px solid var(--primary);
-    border-radius: 20px;
-    font-size: 12px;
-    outline: none;
-    color: var(--quarterly-);
-    background-color: white;
-    transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;}
-    
-    input[type="text"]:focus {
-    border-color: var(--secondary);
-    box-shadow: 0 0 5px var(--secondary);}
-
-    button {
-        padding: 8px 32px;
+        flex: 1;
+        width: 250px;
+        padding: 10px;
+        border: 2px solid var(--primary);
         border-radius: 20px;
-        align-self: center;
-        font-family: "Roboto", serif;
-        font-weight: bold;
-        color: var(--primary);
-        font-size: 11pt;
-        cursor: pointer;
+        font-size: 12px;
+        color: var(--quarterly-);
+        background-color: white;
+        box-sizing: border-box;
+        transition: border-color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
     }
-    
-    .marron {
-        background-color: var(--primary);
-        color: white;
+        
+    input[type="text"]:focus {
+        border-color: var(--secondary);
+        box-shadow: 0 0 5px var(--secondary);
     }
-    
-    .boutton.marron:hover {
-        background-color: var(--secondary);
-    }
-    
 
+    .boutton {
+        margin-bottom: 0;
+    }
 }
-
 
 /* COMMENTAIRES */
 .commentaires-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center; /* Centre les éléments dans le conteneur */
-    gap: 20px; /* Espacement entre les commentaires */
-    max-width: 1000px; /* Ajuste selon la largeur de ton design */
-    margin: 0 auto;
-    padding: 20px;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    max-width: 1200px;
+    gap: 24px;
 }
 
 .commentaire {
-    flex: 1 1 calc(50% - 20px); /* Deux colonnes */
     background-color: #ffffffec;
     border-radius: 20px;
-    padding: 15px;
+    padding: 16px 32px;
     color: var(--quarterly-);
     text-align: justify;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease-in-out;
-    min-width: 300px; /* Assure une largeur minimale */
-    max-width: 450px; /* Ajuste pour ne pas dépasser */
-}
-.commentaire:hover {
-    transform: translateY(-5px);
+    width: 550px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+
+    .auteur {
+        margin-bottom: 16px;
+    }
+
+    .bold {
+        font-weight: bold;
+        color: var(--primary);
+    }
+
+    .italic {
+        font-style: italic;
+    }
 }
 
-.commentaire p {
-    margin: 5px 0;
-}
-
-.commentaire strong {
-    color: var(--primary);
+.livre {
+    font-size: 70pt;
 }
 
 /* BOUTON SUPPRIMER */
+.form-delete {
+    align-self: flex-end;
+}
+
 .delete {
     background: none;
     font-weight: bold;
@@ -337,8 +323,17 @@ footer {
 }
 
 .delete:hover {
-    border-bottom: 1px solid red;
-    color: darkred;
+    animation: jump 0.5s ease;
+    animation-iteration-count: 1;
+}
+
+@keyframes jump {
+    50% {
+      transform: translateY(-15px);
+    }
+    100% {
+      transform: translateY(0);
+    }
 }
 
 /* PAGINATION */
@@ -346,42 +341,37 @@ footer {
     display: flex;
     justify-content: center;
     gap: 8px;
-    margin: 20px;
-}
+    margin: 32px auto 0;
 
-.pagination a {
-    padding: 8px 12px;
-    border-radius: 5px;
-    text-decoration: none;
-    background-color: var(--secondary);
-    color: white;
-    transition: background-color 0.3s ease-in-out;
-}
-
-.pagination a:hover {
-    background-color: var(--primary);
-}
-
-.pagination a.active {
-    background-color: var(--primary);
-    font-weight: bold;
-}
-
-
-
-/* AJOUT COMMENTAIRE */
-
-    textarea {
-        width: 100%; 
-        max-width: 600px; 
-        height: 150px; 
-        min-height: 100px;
-        padding: 10px;
-        font-size: 16px;
-        border: 1px solid #ccc;
+    a {
+        padding: 8px 12px;
         border-radius: 5px;
-        margin:15px;
-        color:var(--quarterly-);
+        text-decoration: none;
+        background-color: var(--secondary);
+        color: white;
+        transition: background-color 0.3s ease-in-out;
+    }
+
+    a:hover {
+        background-color: var(--primary);
     }
     
-    
+    a.active {
+        background-color: var(--primary);
+        font-weight: bold;
+    }
+}
+
+/* AJOUT COMMENTAIRE */
+textarea {
+    width: 100%; 
+    max-width: 600px; 
+    height: 150px; 
+    min-height: 100px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin:15px;
+    color:var(--quarterly-);
+}
